# pathtracing_raytracer

./: CMakeLists.txt  README.md
code/inc/: camera.h  colour.h  hittable_list.h  hittable_object.h  hittable_object_list.h  sphere.h  utility.h  vec3.h
code/src/: hittable_list.cpp  main.cpp  sphere.cpp
renders/: README.md
src/: main.cpp  sphere.cpp  vec3.cpp
src/inc/: camera.h  colour.h  hittable_object.h  material.h  ray.h  sample_renders.h  sphere.h  vec3.h
